# tikpull

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
packaging/macos/: build.sh  icon.icns
packaging/windows/: build.ps1  installer.iss
src/tikpull/: __init__.py  cli.py  config.py  desktop.py  downloader.py  models.py
src/tikpull/web/: app.py  database.py  routes.py  server.py
src/tikpull/web/static/: admin.html  index.html
tests/: test_config.py  test_desktop.py  test_downloader.py  test_multi_platform.py  test_open_folder.py
