[project]
name = "tikpull"
version = "0.3.0"
description = "Download TikTok, YouTube, and Instagram videos from the command line or as a Python library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.1.1",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20.0",
]

[project.scripts]
tikpull = "tikpull.cli:main"
tikpull-web = "tikpull.web.server:main"
tikpull-desktop = "tikpull.desktop:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
desktop = [
    "pywebview>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tikpull"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tikpull --cov-report=term-missing"
pythonpath = ["src"]
